--- a/TicTacToe_Desktop/main/android/bin/AndroidManifest.xml
+++ b/TicTacToe_Desktop/main/android/bin/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:versionCode="1" 
-    android:versionName="1.0" 
+    android:versionCode="2" 
+    android:versionName="2" 
     package="processing.test.main">
-     <uses-sdk android:minSdkVersion="10"
+     <uses-sdk android:minSdkVersion="12"
               android:targetSdkVersion="18" />   
     <application 
          android:icon="@drawable/icon" 
-         android:label="main">
+         android:label="TicTacToe">
        		<activity android:name=".main">
        		    <intent-filter>
        		        <action android:name="android.intent.action.MAIN"/>
