--- a/CowBattle/CowBattle/android/bin/AndroidManifest.xml
+++ b/CowBattle/CowBattle/android/bin/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
     android:versionCode="1" 
-    android:versionName="1.0" 
+    android:versionName="1.1" 
     package="processing.test.cowbattle">
-    <uses-sdk android:minSdkVersion="10"/>
-    <application android:debuggable="true" 
+    <uses-sdk android:minSdkVersion="13"/>
+    <application android:debuggable="false" 
         android:icon="@drawable/icon" 
         android:label="CowBattle">
         <activity android:name=".CowBattle">
@@ -12,6 +12,9 @@
                 android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>                
-		</activity>                
+		</activity>
+		<activity android:name="com.google.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation"/>                
 	</application>
+	 <uses-permission android:name="android.permission.INTERNET" />
+            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 </manifest>
