--- a/CowBattle/CowBattle/android/AndroidManifest.xml
+++ b/CowBattle/CowBattle/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
     android:versionCode="1" 
     android:versionName="1.1" 
-    package="processing.test.cowbattle">
-    <uses-sdk android:minSdkVersion="13"/>
+    package="com.example.cowbattle">
+    <uses-sdk android:minSdkVersion="10"/>
     <application android:debuggable="false" 
         android:icon="@drawable/icon" 
         android:label="CowBattle">
@@ -13,7 +13,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>                
 		</activity>
-		<activity android:name="com.google.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation"/>                
+		<activity android:name="com.google.ads.AdActivity" 
+		    android:configChanges="keyboard|keyboardHidden|orientation"/>                
 	</application>
 	 <uses-permission android:name="android.permission.INTERNET" />
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
