added ads to cow battle ball

--- a/CowBattle/CowBattle/android/project.properties
+++ b/CowBattle/CowBattle/android/project.properties
@@ -2,5 +2,4 @@ target=android-15
 
 # Suppress the javac task warnings about "includeAntRuntime"
 build.sysclasspath=last
-android.library.reference.1=../../../../EclipseWorkspace/appcompat_v7
-android.library.reference.2=../../../../../Eclipse/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.1=..\\..\\..\\..\\..\\Eclipse\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
