--- a/CowBattle/CowBattle/android/AndroidManifest.xml
+++ b/CowBattle/CowBattle/android/AndroidManifest.xml
@@ -2,8 +2,8 @@
     android:versionCode="1" 
     android:versionName="1.1" 
     package="com.example.cowbattle">
-    <uses-sdk android:minSdkVersion="10"/>
-    <application android:debuggable="false" 
+    <uses-sdk android:minSdkVersion="10"/> 
+    <application
         android:icon="@drawable/icon" 
         android:label="CowBattle">
         <activity android:name=".CowBattle">
@@ -13,9 +13,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>                
 		</activity>
-		<activity android:name="com.google.ads.AdActivity" 
-		    android:configChanges="keyboard|keyboardHidden|orientation"/>                
+		<activity 	android:name="com.google.android.gms.ads.AdActivity"
+                 		android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+       	<meta-data 	android:name="com.google.android.gms.version"
+                  		android:value="@integer/google_play_services_version" />             
 	</application>
-	 <uses-permission android:name="android.permission.INTERNET" />
-            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 </manifest>
